fix(thread-safety): synchronize dat2dir source directory settings read-modify-write